composer.json update

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
+.idea
+.php_cs
+.php-cs-fixer.cache
 .phpunit.result.cache
-docker-compose.override.yml
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/.idea
-/.vscode
+build
+composer.lock
+coverage
+docs
+psalm.xml
+vendor
